@@ -1819,6 +1819,7 @@ void TBeing::statBeing(TBeing *k)
       case SKILL_ADVANCED_DEFENSE:
       case SKILL_FOCUSED_AVOIDANCE:
       case SKILL_OFFENSE:
+      case SKILL_ADVANCED_OFFENSE:
       case SKILL_WHITTLE:
       case SKILL_WIZARDRY:
       case SKILL_RITUALISM:
