@@ -119,6 +119,7 @@ enum discNumT {
      DISC_IRON_BODY,
      DISC_ADVANCED_ADVENTURING,
      DISC_COMMONER,
+     DISC_OFFENSE,
      MAX_DISCS,
      MAX_SAVED_DISCS = 90
 };
